# Rust_based_OS

./: README.md  build_log  log
J_os/: Cargo.toml
J_os/.cargo/: config.toml
J_os/src/: interrupts.rs  lib.rs  main.rs  serial.rs
J_os/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
